--- a/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
+++ b/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
@@ -1,5 +1,5 @@
 <div class="" id="cvTemplate">
-    <style>
+    <style *ngIf="false">
         @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap');
 
         #cvTemplate * {
@@ -16,6 +16,7 @@
 
         #cvTemplate .resume {
             width: 900px;
+            min-height: 1200px;
             background: #fff;
             display: flex;
         }
@@ -236,245 +237,7 @@
     </style>
     <div *dynamicComponent="templateHTML; context: {dataCV: dataCV};"></div>
 </div>
-<!-- <div [innerHTML]="templateHTML | safeHtml" id="cvTemplate">
-</div>
-<div id="cvTemplate">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap');
-
-        #cvTemplate * {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-            box-sizing: border-box;
-            font-family: 'Ubuntu', sans-serif;
-        }
-
-        #cvTemplate body {
-            background: linear-gradient(to right, #3525af, #9153c9);
-        }
-
-        #cvTemplate .resume {
-            width: 900px;
-            background: #fff;
-            display: flex;
-        }
-
-        #cvTemplate .left {
-            background: #292b2f;
-            width: 250px;
-            padding: 0 20px;
-        }
-
-        #cvTemplate .right {
-            width: calc(100% - 250px);
-        }
-
-        #cvTemplate .left .img_holder {
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        #cvTemplate .left .img_holder img {
-            width: 200px;
-            border-radius: 30px;
-        }
-
-        #cvTemplate .pb {
-            padding-bottom: 20px;
-        }
-
-        #cvTemplate .title {
-            font-size: 24px;
-            font-weight: 700;
-            text-transform: uppercase;
-            letter-spacing: 5px;
-            padding-bottom: 10px;
-            color: #3525af;
-            position: relative;
-            text-align: right;
-            margin-bottom: 15px;
-        }
-
-        #cvTemplate .title:before {
-            content: "";
-            position: absolute;
-            top: 35px;
-            right: 0;
-            width: 50px;
-            height: 3px;
-            background: #3525af;
-        }
-
-        #cvTemplate .left .icon {
-            font-size: 20px;
-            color: #9153c9;
-        }
-
-        #cvTemplate .left .text {
-            color: #9153c9;
-            text-transform: uppercase;
-            font-size: 13px;
-        }
-
-        #cvTemplate .contact .li_wrap {
-            display: flex;
-            align-items: center;
-            width: 100%;
-            margin-bottom: 15px;
-        }
-
-        #cvTemplate .contact .li_wrap .icon {
-            width: 50px;
-            height: 50px;
-            background: #fff;
-            border-radius: 15px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-right: 15px;
-        }
-
-        #cvTemplate .contact .li_wrap .text {
-            width: calc(100% - 50px);
-            word-break: break-word;
-            color: #fff;
-        }
-
-        #cvTemplate .skills ul,
-        #cvTemplate .hobbies ul {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-
-        #cvTemplate .skills .li_wrap,
-        #cvTemplate .hobbies .li_wrap {
-            width: 100px;
-            height: 100px;
-            margin-bottom: 15px;
-            border-radius: 15px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        #cvTemplate .skills .li_wrap {
-            background: #fff;
-        }
-
-        #cvTemplate .skills .li_wrap .text,
-        #cvTemplate .hobbies .li_wrap .text {
-            margin-top: 5px;
-        }
-
-        #cvTemplate .hobbies .li_wrap {
-            border: 2px solid #fff;
-        }
-
-        #cvTemplate .hobbies .li_wrap .icon,
-        #cvTemplate .hobbies .li_wrap .text {
-            color: #fff;
-        }
-
-        #cvTemplate .hobbies .li_wrap:hover {
-            background: #fff;
-        }
-
-        #cvTemplate .hobbies .li_wrap:hover .icon,
-        #cvTemplate .hobbies .li_wrap:hover .text {
-            color: #9153c9;
-        }
-
-        #cvTemplate .header {
-            background: #292b2f;
-            padding: 15px 30px;
-            color: #fff;
-            height: 240px;
-        }
-
-        #cvTemplate .header .name {
-            font-size: 52px;
-            text-transform: uppercase;
-            font-weight: 700;
-            color: #3525af;
-        }
-
-        #cvTemplate .header .role {
-            font-weight: 300;
-            font-size: 20px;
-        }
-
-        #cvTemplate .header .about {
-            margin-top: 20px;
-            line-height: 26px;
-        }
-
-        #cvTemplate .right_inner {
-            padding: 30px;
-            color: #292b2f;
-        }
-
-        #cvTemplate .right_inner .education {
-            margin-top: 30px;
-        }
-
-        #cvTemplate .right_inner .li_wrap {
-            display: flex;
-            margin-bottom: 15px;
-        }
-
-        #cvTemplate .right_inner .li_wrap .date {
-            width: 125px;
-            color: #9153c9;
-        }
-
-        #cvTemplate .right_inner .li_wrap .info {
-            width: calc(100% - 125px);
-            padding-left: 25px;
-            position: relative;
-        }
-
-        #cvTemplate .right_inner .li_wrap .info_title {
-            text-transform: uppercase;
-            font-weight: 700;
-            letter-spacing: 2px;
-            color: #9153c9;
-        }
-
-        #cvTemplate .right_inner .li_wrap .info_com {
-            font-weight: 300;
-            font-size: 14px;
-            margin-top: 3px;
-        }
-
-        #cvTemplate .right_inner .li_wrap .info_cont {
-            margin-top: 15px;
-        }
-
-        #cvTemplate .right_inner .li_wrap .info:before {
-            content: "";
-            position: absolute;
-            top: 3px;
-            left: 0;
-            width: 10px;
-            height: 10px;
-            background: #9153c9;
-            border-radius: 50%;
-        }
-
-        #cvTemplate .right_inner .li_wrap .info:after {
-            content: "";
-            position: absolute;
-            top: 10px;
-            left: 4px;
-            width: 2px;
-            height: 90%;
-            background: #9153c9;
-        }
-
-    </style>
+<!-- 
     <div class="wrapper">
         <div class="resume">
             <div class="left">
@@ -620,3 +383,4 @@
     </div>
 </div>
 <script src="https://kit.fontawesome.com/b99e675b6e.js"></script> -->
+<!-- <script src="https://kit.fontawesome.com/b99e675b6e.js"></script> -->
