--- a/7.1.0/angular/src/main/create-cv/create-cv.component.css
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.css
@@ -1,7 +1,7 @@
 #cv {
     /* width: 640px; */
-    position: absolute;
-    top: 0px;
+    position: fixed;
+    top: -23%;
     transform: scale(0.55);
 }
 
