--- a/7.1.0/angular/src/main/select-template/select-template.component.html
+++ b/7.1.0/angular/src/main/select-template/select-template.component.html
@@ -8,13 +8,15 @@
 
         <div class="container-fluid mt-4 mb-2">
             <div class="row">
+                <!-- <div *ngIf="allTemplate"> -->
                 <div class="col-md-2 ml-5 mb-5 mt-2 text-center" *ngFor="let template of allTemplate; let i = index">
                     <div class="card">
                         <!-- <i class="fa fa-arrow-circle-left"></i> -->
-                        <!-- <img [src]="template.imageURL" class="card-img-top" loading="lazy" alt="picture"> -->
+                        <img [src]="template.imageURL" class="card-img-top" loading="lazy" alt="picture">
                     </div>
                     <button type="button" class="btn btn-usetemplate" [routerLink]="['../create-cv', template.id]">Dùng Mẫu</button>
                 </div>
+            <!-- </div> -->
             </div>
         </div>
     </div>
