Update Flow and Logic and API

--- a/7.1.0/angular/src/assets/template/template2/styles.css
+++ b/7.1.0/angular/src/assets/template/template2/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap");
 
-* {
+#cvTemplate2 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -8,83 +8,83 @@
   font-family: "Montserrat", sans-serif;
 }
 
-body {
+#cvTemplate2 body {
   background: #585c68;
   font-size: 14px;
   line-height: 22px;
   color: #555555;
 }
 
-.bold {
+#cvTemplate2 .bold {
   font-weight: 700;
   font-size: 20px;
   text-transform: uppercase;
 }
 
-.semi-bold {
+#cvTemplate2 .semi-bold {
   font-weight: 500;
   font-size: 16px;
 }
 
-.resume {
+#cvTemplate2 .resume {
   width: 800px;
   height: auto;
   display: flex;
   margin: 50px auto;
 }
 
-.resume .resume_left {
+#cvTemplate2 .resume .resume_left {
   width: 280px;
   background: #0bb5f4;
 }
 
-.resume .resume_left .resume_profile {
+#cvTemplate2 .resume .resume_left .resume_profile {
   width: 100%;
   height: 280px;
 }
 
-.resume .resume_left .resume_profile img {
+#cvTemplate2 .resume .resume_left .resume_profile img {
   width: 100%;
   height: 100%;
 }
 
-.resume .resume_left .resume_content {
+#cvTemplate2 .resume .resume_left .resume_content {
   padding: 0 25px;
 }
 
-.resume .title {
+#cvTemplate2 .resume .title {
   margin-bottom: 20px;
 }
 
-.resume .resume_left .bold {
+#cvTemplate2 .resume .resume_left .bold {
   color: #fff;
 }
 
-.resume .resume_left .regular {
+#cvTemplate2 .resume .resume_left .regular {
   color: #b1eaff;
 }
 
-.resume .resume_item {
+#cvTemplate2 .resume .resume_item {
   padding: 25px 0;
   border-bottom: 2px solid #b1eaff;
 }
 
-.resume .resume_left .resume_item:last-child,
-.resume .resume_right .resume_item:last-child {
+#cvTemplate2 .resume .resume_left .resume_item:last-child,
+#cvTemplate2 .resume .resume_right .resume_item:last-child {
   border-bottom: 0px;
 }
 
-.resume .resume_left ul li {
+#cvTemplate2 .resume .resume_left ul li {
   display: flex;
   margin-bottom: 10px;
   align-items: center;
 }
 
-.resume .resume_left ul li:last-child {
+#cvTemplate2 .resume .resume_left ul li:last-child {
   margin-bottom: 0;
 }
 
-.resume .resume_left ul li .icon {
+#cvTemplate2 .resume .resume_left ul li .icon {
   width: 35px;
   height: 35px;
   background: #fff;
@@ -95,19 +95,19 @@ body {
   position: relative;
 }
 
-.resume .icon i,
-.resume .resume_right .resume_hobby ul li i {
+#cvTemplate2 .resume .icon i,
+#cvTemplate2 .resume .resume_right .resume_hobby ul li i {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.resume .resume_left ul li .data {
+#cvTemplate2 .resume .resume_left ul li .data {
   color: #b1eaff;
 }
 
-.resume .resume_left .resume_skills ul li {
+#cvTemplate2 .resume .resume_left .resume_skills ul li {
   display: flex;
   margin-bottom: 10px;
   color: #b1eaff;
@@ -115,11 +115,11 @@ body {
   align-items: center;
 }
 
-.resume .resume_left .resume_skills ul li .skill_name {
+#cvTemplate2 .resume .resume_left .resume_skills ul li .skill_name {
   width: 25%;
 }
 
-.resume .resume_left .resume_skills ul li .skill_progress {
+#cvTemplate2 .resume .resume_left .resume_skills ul li .skill_progress {
   width: 60%;
   margin: 0 5px;
   height: 5px;
@@ -127,11 +127,11 @@ body {
   position: relative;
 }
 
-.resume .resume_left .resume_skills ul li .skill_per {
+#cvTemplate2 .resume .resume_left .resume_skills ul li .skill_per {
   width: 15%;
 }
 
-.resume .resume_left .resume_skills ul li .skill_progress span {
+#cvTemplate2 .resume .resume_left .resume_skills ul li .skill_progress span {
   position: absolute;
   top: 0;
   left: 0;
@@ -139,47 +139,47 @@ body {
   background: #fff;
 }
 
-.resume .resume_left .resume_social .semi-bold {
+#cvTemplate2 .resume .resume_left .resume_social .semi-bold {
   color: #fff;
   margin-bottom: 3px;
 }
 
-.resume .resume_right {
+#cvTemplate2 .resume .resume_right {
   width: 520px;
   background: #fff;
   padding: 25px;
 }
 
-.resume .resume_right .bold {
+#cvTemplate2 .resume .resume_right .bold {
   color: #0bb5f4;
 }
 
-.resume .resume_right .resume_work ul,
-.resume .resume_right .resume_education ul {
+#cvTemplate2 .resume .resume_right .resume_work ul,
+#cvTemplate2 .resume .resume_right .resume_education ul {
   padding-left: 40px;
   overflow: hidden;
 }
 
-.resume .resume_right ul li {
+#cvTemplate2 .resume .resume_right ul li {
   position: relative;
 }
 
-.resume .resume_right ul li .date {
+#cvTemplate2 .resume .resume_right ul li .date {
   font-size: 16px;
   font-weight: 500;
   margin-bottom: 15px;
 }
 
-.resume .resume_right ul li .info {
+#cvTemplate2 .resume .resume_right ul li .info {
   margin-bottom: 20px;
 }
 
-.resume .resume_right ul li:last-child .info {
+#cvTemplate2 .resume .resume_right ul li:last-child .info {
   margin-bottom: 0;
 }
 
-.resume .resume_right .resume_work ul li:before,
-.resume .resume_right .resume_education ul li:before {
+#cvTemplate2 .resume .resume_right .resume_work ul li:before,
+#cvTemplate2 .resume .resume_right .resume_education ul li:before {
   content: "";
   position: absolute;
   top: 5px;
@@ -190,8 +190,8 @@ body {
   border: 2px solid #0bb5f4;
 }
 
-.resume .resume_right .resume_work ul li:after,
-.resume .resume_right .resume_education ul li:after {
+#cvTemplate2 .resume .resume_right .resume_work ul li:after,
+#cvTemplate2 .resume .resume_right .resume_education ul li:after {
   content: "";
   position: absolute;
   top: 14px;
@@ -201,12 +201,12 @@ body {
   background: #0bb5f4;
 }
 
-.resume .resume_right .resume_hobby ul {
+#cvTemplate2 .resume .resume_right .resume_hobby ul {
   display: flex;
   justify-content: space-between;
 }
 
-.resume .resume_right .resume_hobby ul li {
+#cvTemplate2 .resume .resume_right .resume_hobby ul li {
   width: 80px;
   height: 80px;
   border: 2px solid #0bb5f4;
@@ -215,11 +215,11 @@ body {
   color: #0bb5f4;
 }
 
-.resume .resume_right .resume_hobby ul li i {
+#cvTemplate2 .resume .resume_right .resume_hobby ul li i {
   font-size: 30px;
 }
 
-.resume .resume_right .resume_hobby ul li:before {
+#cvTemplate2 .resume .resume_right .resume_hobby ul li:before {
   content: "";
   position: absolute;
   top: 40px;
@@ -229,6 +229,6 @@ body {
   background: #0bb5f4;
 }
 
-.resume .resume_right .resume_hobby ul li:last-child:before {
+#cvTemplate2 .resume .resume_right .resume_hobby ul li:last-child:before {
   display: none;
 }
