--- a/7.1.0/angular/src/main/all-cv/all-cv.component.html
+++ b/7.1.0/angular/src/main/all-cv/all-cv.component.html
@@ -1,50 +1,61 @@
 <div [@routerTransition]>
-<div class="container-fluid pt-4 pl-4 pr-4">
-    <div class="row">
-        <div class="col-12">
-            <div class="card-body">
-                <div class="form-group row">
-                    <div class="col-sm-12 col-md-12 search-area">
-                        <div class="filter">
-                            <ng-select bindLabel="name" bindValue="id" [searchable]="false" placeholder="Select Filter">
-                            </ng-select>
-                        </div>
-                        <div class="input-group group-search">
-                            <input type="text" class="form-control" placeholder="Search" aria-label="Title"
-                                aria-describedby="addon-wrapping">
+    <div class="container-fluid pt-4 pl-4 pr-4">
+        <div class="row">
+            <div class="col-12">
+                <div class="card-body">
+                    <div class="form-group row">
+                        <div class="col-sm-12 col-md-12 search-area">
+                            <div class="filter">
+                                <ng-select bindLabel="name" bindValue="id" [searchable]="false"
+                                    placeholder="Lựa chọn bộ lọc">
+                                </ng-select>
+                            </div>
+                            <div class="input-group group-search">
+                                <input type="text" class="form-control" placeholder="Tìm kiếm" aria-label="Title"
+                                    aria-describedby="addon-wrapping">
 
-                            <div class="input-group-prepend">
-                                <button type="button" class="btn-basic btn-search">Tìm Kiếm</button>
+                                <div class="input-group-prepend">
+                                    <button type="button" class="btn-basic btn-search">Tìm Kiếm</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-md-3 mb-5 mt-2 text-center padding-card">
-                        <div class="card card-border">
-                            <div class="card-body d-flex">
-                                <div class="card-title">
-                                    <img src="./../../assets/img/Avatar-Green.svg" style="height:5rem" alt="Avatar">
+                    <div class="form-group row">
+                        <div class="col-md-3 mb-5 mt-2 text-center padding-card" *ngFor="let item of listCV">
+                            <div class="card card-border">
+                                <div class="card-body d-flex">
+                                    <div class="card-title">
+                                        <img src="./../../assets/img/Avatar-Green.svg" style="height:5rem" alt="Avatar">
+                                    </div>
+                                    <div>
+                                        <h3 class="card-subtitle mb-2 font-weight-bold float-left ml-3">
+                                            {{item.firstName}} {{item.lastName}}</h3>
+                                        <h6 class="card-subtitle mb-2 font-weight-bold float-left ml-3">
+                                            {{item.headline}}</h6>
+                                        <p class="card-text text-justify ml-3">{{item.description}}</p>
+                                    </div>
                                 </div>
-                                <div>
-                                    <h3 class="card-subtitle mb-2 font-weight-bold float-left ml-3">Card subtitle</h3>
-                                    <p class="card-text text-justify ml-3">Some quick example text to build on the card title and make up
-                                        the
-                                        bulk of
-                                        the card's content.</p>
+                                <div class="card-link mr-3 mb-2">
+                                    <a href="#" id="basic-link" class="float-right">
+                                        <img src="./../../assets/img/bxs_comment-edit.svg" height="40"
+                                            alt="Notifications" loading="lazy"
+                                            [routerLink]="['../web-view', item.id]" />
+                                    </a>
+                                    <a href="#" id="basic-link" class="float-right mr-2">
+                                        <img src="./../../assets/img/bxs_comment-edit.svg" height="40"
+                                            alt="Notifications" loading="lazy" />
+                                    </a>
+                                    <button href="#" id="basic-link" class="float-right bg-white border-0"
+                                        (click)="updateLikeStatus(item.id)">
+                                        <img *ngIf="!item.isLike" src="./../../assets/img/akar-icons_heart.svg"
+                                            height="40" alt="Heart" loading="lazy" />
+                                        <img *ngIf="item.isLike" src="./../../assets/img/ant-design_heart-filled.svg"
+                                            height="40" alt="Heart" loading="lazy" />
+                                    </button>
+                                    <h6 class="float-right bg-white border-0"
+                                        style="text-align:center; font-size:2rem; color: red !important">
+                                        {{item.totalLike}}</h6>
                                 </div>
-                            </div>
-                            <div class="card-link mr-3 mb-2">
-                                <a href="#" id="basic-link" class="float-right" >
-                                    <img src="./../../assets/img/bxs_comment-edit.svg" height="40" alt="Notifications" loading="lazy" />
-                                </a>
-                                <a href="#" id="basic-link" class="float-right mr-2" >
-                                    <img src="./../../assets/img/bxs_comment-edit.svg" height="40" alt="Notifications" loading="lazy" />
-                                </a>
-                                <button href="#" id="basic-link" class="float-right bg-white border-0" (click)="toogleLike()" >
-                                    <img *ngIf="like" src="./../../assets/img/akar-icons_heart.svg" height="40" alt="Heart" loading="lazy"  />
-                                    <img *ngIf="!like" src="./../../assets/img/ant-design_heart-filled.svg" height="40" alt="Heart" loading="lazy"  />
-                                </button>
                             </div>
                         </div>
                     </div>
@@ -52,5 +63,4 @@
             </div>
         </div>
     </div>
-</div>
 </div>
