--- a/7.1.0/angular/src/main/web-view-pdf/web-view.component.html
+++ b/7.1.0/angular/src/main/web-view-pdf/web-view.component.html
@@ -1,5 +1,5 @@
 <!-- <button type="button" (click)="saveFilePDF()" id="btnSave">Save</button>
 <button type="button" id="btnCancel">Cancel</button> -->
 <div class="pdf-viewer">
-	<div id="pspdfkit-container" style="width: 100%; height: 100vh"></div>
+	<div id="container" style="width: 100%; height: 100vh"></div>
 </div>
