--- a/7.1.0/angular/src/main/layout/header.component.html
+++ b/7.1.0/angular/src/main/layout/header.component.html
@@ -17,7 +17,7 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link text-secondary" routerLink="select-template">Tạo CV theo Template</a>
+          <a class="nav-link text-secondary" routerLink="select-template">Tạo CV theo mẫu</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-secondary" routerLink="all-cv">Đánh giá CV</a>
@@ -26,7 +26,7 @@
           <a class="nav-link text-secondary" href="#">Top CV nổi bật</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-secondary" href="#">Câu hỏi nổi bật</a>
+          <a class="nav-link text-secondary" href="#">Câu hỏi thường gặp</a>
         </li>
       </ul>
       <!-- Left links -->
@@ -93,7 +93,10 @@
         <ul id="basic-link-dropdown" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
           aria-labelledby="basic-link">
           <li>
-            <a class="dropdown-item" routerLink="user-information/1">Thông tin của tôi</a>
+            <a class="dropdown-item" [routerLink]="['user-information', userId]">Thông tin của tôi</a>
+          </li>
+                    <li>
+            <a class="dropdown-item" [routerLink]="['cv-management', userId]">Quản lý hồ sơ ứng tuyển</a>
           </li>
           <li>
             <a class="dropdown-item" routerLink="reset-password">Đổi mật khẩu</a>
