Update Edit CV Screen and Features

--- a/7.1.0/angular/src/main/create-cv/create-cv.component.html
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.html
@@ -373,7 +373,7 @@
                     <div class="col p-0 d-flex justify-content-center align-items-center"
                         style="background-color: #F5F5F5;">
                         <div id="cv" #cv>
-                            <app-base-template [dataCV]="createCVForm"></app-base-template>
+                            <app-base-template [dataCV]="createCVForm" [teamplateId]="templateId"></app-base-template>
                         </div>
                     </div>
 
