--- a/7.1.0/angular/src/account/account.component.html
+++ b/7.1.0/angular/src/account/account.component.html
@@ -1,15 +1,11 @@
-﻿<div class="login-box">
-  <account-header></account-header>
+﻿<div>
+  <!-- <account-header></account-header> -->
   <div class="card">
-    <div *ngIf="showTenantChange()" class="card-header">
+    <!-- <div *ngIf="showTenantChange()" class="card-header">
       <tenant-change></tenant-change>
-    </div>
-    <div class="card-body login-card-body">
+    </div> -->
+    <div class="card-body login-card-body-custom" style="padding: 3rem !important;">
       <router-outlet></router-outlet>
     </div>
-    <div class="card-footer">
-      <account-languages></account-languages>
     </div>
-  </div>
-  <account-footer></account-footer>
 </div>
